# open-interfaces

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamllint  AUTHORS.md  CITATION.cff  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Manifest.toml  Project.toml  README.md  backend_python.c  build_package_python.sh  dispatch.c  dispatch.h  env.sh  environment-linux.yaml  environment-macos.yaml  environment.yaml  globals.h  helpers.py  matplotlibrc  oif_config.h.in  oif_env.in  oif_env_pytest.in  pyproject.toml  requirements-dev.txt  requirements-macos.txt  requirements.in  requirements.txt  setup.cfg  test_cvode.py
common/: CMakeLists.txt  oif_config_dict.c  util.c
connector/: CMakeLists.txt  oif_connector.c  oif_connector.h
dispatch/: CMakeLists.txt  dispatch.c
docs/: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  conf.py  conf.py.in  requirements-docs.txt
docs/source/: compare-perf-ivp-burgers-eqn.md  conf.py  example-ivp-burgers-equation-in-python.md  index.rst  notes-on-dbus.md  overview.md  python-buffer-protocol.md
docs/source/api/: available-interfaces.md  c.rst  index.rst  python.rst
docs/source/explanation/: architecture.md  data-types.md  function-calls.md  index.rst
docs/source/getting-started/: example-ivp-burgers-equation-in-c.md  example-ivp-burgers-equation-in-python.md  example-solve-vdp-c.md  example-solve-vdp-python.md  index.rst  installation.md  overview.md
docs/source/how-to/: implement-ivp-python.md  index.rst
docs/source/technotes/: 2023-09-05-notes-on-dbus.md  2023-09-08-python-buffer-protocol.md  2024-01-25-compare-perf-ivp-burgers-eqn.md  2024-01-31-profiling.md  2024-02-08-perf-conv-to-c-types-from-py.md  2024-02-09-conversion-of-oif-arrays-c-ext.md  2024-02-23-python-wrapper-for-c-callback.md  2024-03-12-perf-study-ivp-cvode-gray-scott.md  2025-03-31-folder-structure.md  2025-05-05-how-to-release.md  2025-11-20-optimization-interface.md  2025-12-10-out-and-return-args.md  index.rst
docs/sphinx_src/: index.md
examples/: CMakeLists.txt  call_ivp_from_c.c  call_ivp_from_c_burgers_eq.c  call_ivp_from_c_vdp_eq.c  call_ivp_from_python.py  call_ivp_from_python_burgers_eq.py  call_ivp_from_python_vdp.py  call_linear_solver_from_python.py  call_linsolve_from_c.c  call_linsolve_from_python.py  call_optim_rosenbrock.py  call_qeq_from_c.c  call_qeq_from_python.py  compare_performance_ivp_burgers_eq.py  compare_performance_ivp_burgers_eq_pure_comparison.py  compare_performance_ivp_cvode_gray_scott.py  plot_solution_1D.py  qeq_c_c.c  qeq_from_c.py  qeq_from_python.py
examples/c/: main_c.c
examples/cpp/: main_cpp.cc
examples/julia/: main_julia.jl
examples/lang_julia/: call_ivp.jl  call_ivp_burgers_eq.jl  call_ivp_vdp.jl  call_linsolve.jl  call_optim_rosenbrock.jl  call_qeq.jl  call_qeq_from_julia.jl
examples/lang_python/: call_ivp_from_python_burgers_eq.py  call_optim_convex.py  call_optim_rosenbrock.py  compare_performance_ivp_burgers_eq.py  compare_performance_ivp_cvode_gray_scott.py
examples/python/: main_python.py
examples/r/: main_r.r
julia/: CMakeLists.txt  embed.c  oif_julia.c  oif_julia.h
lang_c/: CMakeLists.txt  main_c.c  oif_c.c
lang_c/oif/: CMakeLists.txt  c_bindings.c
lang_c/oif_impl/: CMakeLists.txt  allocation_tracker.c  bridge_c.c
lang_c/oif_impl/_impl/: CMakeLists.txt
lang_c/oif_interfaces/src/: ivp.c  linsolve.c  qeq.c
lang_cpp/: CMakeLists.txt  main_cpp.cc  oif_cpp.cc
lang_julia/: CMakeLists.txt  bridge_julia.c  dispatch_julia.c  main_julia.jl  oif_julia.c
lang_julia/OpenInterfaces/: Manifest.toml  Project.toml
lang_julia/OpenInterfaces/src/: OpenInterfaces.jl  interfaces.jl
lang_julia/OpenInterfacesImpl/: Manifest.toml  Project.toml
lang_julia/OpenInterfacesImpl/src/: callback.jl  serialization.jl
lang_julia/openInterfaces/: Project.toml  README.md
lang_julia/openInterfaces/test/: runtests.jl
lang_julia/package/: Project.toml  README.md
lang_julia/package/src/: OpenInterfaces.jl  openInterfaces.jl
lang_julia/package/test/: CMakeLists.txt  runtests.jl  (+3 more)
lang_python/: CMakeLists.txt  main_python.py  oif_python.c  oif_python.py
lang_python/oif/: CMakeLists.txt  _convert.c
lang_python/oif_impl/: CMakeLists.txt  _callback.c  _serialization.py  bridge_python.c
lang_python/package/: .gitignore  pyproject.toml
lang_r/: CMakeLists.txt  main_r.r  oif_r.c  oif_r.h
oif/: CMakeLists.txt  dispatch.c  util.c
oif/common/: CMakeLists.txt
oif/dispatch/: CMakeLists.txt  dispatch.c
oif/lang_c/: CMakeLists.txt  allocation_tracker.c  c_bindings.c  oif_config_dict.c  oif_util.c  util.h
oif/lang_python/: CMakeLists.txt  _convert.c
oif_connector/: CMakeLists.txt  disable_warnings.h  oif_connector.c  oif_connector.h  oif_constants.h  oif_interface.h  reenable_warnings.h
oif_impl/c/: CMakeLists.txt  dispatch_c.c  oif_impl_util.c
oif_impl/lang_c/: CMakeLists.txt  allocation_tracker.c  allocation_tracker.h  bridge_c.c  dispatch_c.c  oif_impl_util.c
oif_impl/lang_julia/: CMakeLists.txt  callback.jl  dispatch_julia.c  serialization.jl
oif_impl/lang_python/: CMakeLists.txt  dispatch_python.c
oif_impl/python/: CMakeLists.txt  _callback.c  _serialization.py  dispatch_python.c
python/: CMakeLists.txt  oif_python.c  oif_python.h
tests/: CMakeLists.txt  conftest.py  julia  test_basic.py  test_segfaults.sh
tests/c/: CMakeLists.txt  test_all.c
tests/cpp/: CMakeLists.txt  test_all.cc
tests/lang_c/: CMakeLists.txt  run_aux_tests_config_dict.cpp  test_config_dict.cpp  test_examples.cpp  test_ivp.cpp  test_linsolve.cpp  test_output.cpp  test_qeq.cpp  test_util.cpp  testutils.h  testutils.hpp
tests/lang_julia/: CMakeLists.txt  aux_funcs.c  runtests.jl  test_callback.jl  test_examples.jl  test_ivp.jl  test_linsolve.jl  test_optim.jl  test_qeq.jl
tests/lang_python/: test_examples.py  test_ivp.py  test_linsolve.py  test_optim.py  test_qeq.py  test_util.py
tests/python/: CMakeLists.txt  conftest.py  test_basic.py  test_init.py  test_solve.py
tests/r/: CMakeLists.txt  test_all.r
(+233 files in other folders)
