[build-system]
requires = ["scikit-build-core>=0.11", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "openinterfaces"
version = "0.5.5"
authors = [
    { name = "Dmitry I. Kabanov", email = "dmitry.kabanov@uni-muenster.de" },
    { name = "Stephan Rave", email = "stephan.rave@uni-muenster.de" },
    { name = "Mario Ohlberger", email = "mario.ohlberger@uni-muenster.de" },
]
description = "Open Interfaces for improving Interoperability in Scientific Computing"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Programming Language :: C",
    "Programming Language :: Other",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy",
    "scipy",
    "msgpack",
]

[project.urls]
homepage = "https://github.com/MaRDI4NFDI/open-interfaces"
documentation = "https://mardi4nfdi.github.io/open-interfaces/"
issues = "https://github.com/MaRDI4NFDI/open-interfaces/issues"
source = "https://github.com/MaRDI4NFDI/open-interfaces"

[tool.scikit-build]
sdist.include = [
    "/common/",
    "/dispatch/",
    "/examples/*.py",
    "/include/",
    "/lang_python/",
    "/tests/lang_python/",
    "/vendor/",
    "CMakeLists.txt",
    "LICENSE",
    "pyproject.toml",
    "README.md",
    "!build*/**/CMakeLists.txt",
    "!dist/**/CMakeLists.txt",
    "!examples/CMakeLists.txt",
    "!oif/**/CMakeLists.txt",
    "!oif_impl/**/CMakeLists.txt",
    "!dist/**/*",
    "!*.so",
    "!build*/**",
    "!build*/**/README.md",
    "!build*/**/LICENSE",
    "!build*/**/pyproject.toml",
    "!**/__pycache__/",
]

sdist.exclude = [
    "*",
]

wheel.exclude = ["**.c", "CMakeLists.txt"]

[tool.scikit-build.wheel.packages]
"openinterfaces" = "lang_python/oif/openinterfaces"
"openinterfaces/examples" = "examples"
"openinterfaces/interfaces" = "lang_python/oif_interfaces/openinterfaces/interfaces"
"openinterfaces/_impl" = "lang_python/oif_impl/openinterfaces/_impl"

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
