add_library(oif_c_util SHARED util.c)
target_include_directories(oif_c_util PUBLIC ${CMAKE_SOURCE_DIR}/oif/include)

add_library(oif_dispatch SHARED dispatch.c)
target_include_directories(oif_dispatch PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(oif_dispatch PUBLIC ${CMAKE_SOURCE_DIR}/oif/include)
target_link_libraries(oif_dispatch PRIVATE oif_c_util)
target_link_libraries(oif_dispatch PRIVATE dl)
target_link_libraries(oif_dispatch PRIVATE HashMap::HashMap)

if(IS_DIRECTORY lang_c)
    add_subdirectory(lang_c)
endif()
if(IS_DIRECTORY lang_python)
    add_subdirectory(lang_python)
endif()
