add_library(oif_c_util SHARED util.c)
target_include_directories(oif_c_util PUBLIC ${CMAKE_SOURCE_DIR}/oif/include)
install(TARGETS oif_c_util DESTINATION lib)

add_library(oif_dispatch SHARED dispatch.c)
target_include_directories(oif_dispatch PUBLIC ${CMAKE_SOURCE_DIR}/include)
target_include_directories(oif_dispatch PUBLIC ${CMAKE_SOURCE_DIR}/oif/include)
target_link_libraries(oif_dispatch PRIVATE oif_c_util)
target_link_libraries(oif_dispatch PRIVATE dl)
target_link_libraries(oif_dispatch PRIVATE HashMap::HashMap)
install(TARGETS oif_dispatch DESTINATION lib)

if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lang_c)
    add_subdirectory(lang_c)
endif()
if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lang_python)
    add_subdirectory(lang_python)
endif()
